# Mirror

./: CMakeLists.txt  Final Project.sln
Final Project/: Final Project.vcxproj  Final Project.vcxproj.filters  hxlib.h  main.cpp  packages.config
Final Project/Debug/: Final Project.pch  Final Project.vcxprojAssemblyReference.cache  vc141.idb
Final Project/Debug/Final Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Final Project.lastbuildstate  Final Project.write.1u.tlog
Final Project/x64/Debug/: Final Project.exe.recipe  Final Project.vcxproj.AssemblyReference.cache  Final Project.vcxproj.FileListAbsolute.txt  Final Project.vcxprojAssemblyReference.cache  vc141.idb  vc145.idb
Final Project/x64/Debug/Final Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Final Project.lastbuildstate  Final Project.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Final Project/x64/Release/: Final Project.pch
Final Project/x64/Release/Final Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Final Project.lastbuildstate  Final Project.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
